--- a/show.html
+++ b/show.html
@@ -163,7 +163,7 @@
 
             <div class="pagination">
                 <img src="images/arrow.png">
-                <span>1</span>
+                <span class="current">1</span>
                 <span>2</span>
                 <span>3</span>
                 <span>4</span>
@@ -175,7 +175,7 @@
             </div>
         
   
-    <div style="margin: 100% 0px 14px;" class="footer">
+    <div style="margin: 5% 0px 14px;" class="footer">
             <a href="https://facebook.com/"><i class="fa-brands fa-facebook-square"></i></a>
             <a href="https://youtube.com/"><i class="fa-brands fa-youtube"></i></a>
             <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
