--- a/show.html
+++ b/show.html
@@ -186,7 +186,7 @@
     </div>
     
     <script>
-        var navBar = document.getElementById("bar");
+        var bar = document.getElementById("bar");
         function togglebtn(){
             bar.classList.toggle("hidemenu");
         }
