--- a/show.html
+++ b/show.html
@@ -15,6 +15,7 @@
             <li><a href="#" class="active">RENT</a></li>
             <li><a href="#">BUY</a></li>
             <li><a href="#">Most Searched</a></li>
+            <li><a href="house.html">Go to Next Page</a></li>
         </ul>
         <a href="#" class="register-btn">Register Here</a>
         <i class="fas fa-bars" onclick="togglebtn()"></i>
