--- a/house.html
+++ b/house.html
@@ -18,6 +18,7 @@
             <li><a href="#" class="active">RENT</a></li>
             <li><a href="#">BUY</a></li>
             <li><a href="show.html">Most Searched</a></li>
+            <li><a href="index.html">Home</a></li>
         </ul>
         <a href="#" class="register-btn">Register Here</a>
         <i class="fas fa-bars" onclick="togglebtn()"></i>
